[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "anything2md"
version = "0.1.1"
description = "Convert documents to Markdown using Cloudflare Workers AI toMarkdown."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Anything2MD Contributors"}
]
dependencies = [
  "httpx>=0.27,<1"
]

[project.urls]
Homepage = "https://github.com/herrkaefer/anything2md"
Repository = "https://github.com/herrkaefer/anything2md"

[project.optional-dependencies]
test = [
  "pytest>=8,<9"
]

[project.scripts]
anything2md = "anything2md.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: marks tests that hit real external services",
]
